# python-mock-firestore

./: .gitignore  README.md  agent-coding-standards.md  pyproject.toml  setup.py
.github/workflows/: pr_agent.yml  test.yml
mockfirestore/: collection.py  document.py  query.py
tests/: test_document_reference.py  test_where_field.py
